# qingy-fork

./: AUTHORS  ChangeLog  ChangeLog.paolino  HOWTO_THEMES  INSTALL  Makefile  Makefile.am  NEWS  README  THANKS  TODO  Themes  Themes.texi  autogen.sh  configure.in  kickstart.sh  qingy.spec.in  settings  theme
doc/: Makefile.am  Settings.texi  Themes  Themes.texi  fdl.texi  gpl.texi  qingy.texi
media/: Makefile.am  creatercfile  creatercfile.c  qingy-mode.el  settings  themer
media/default/: Makefile.am  theme
media/gpm-lock/: Makefile.am
media/gpm-lock/fedora/: pre_GUI.sh
media/gpm-lock/gentoo/: post_GUI.sh  pre_GUI.sh
media/gpm-lock/slackware/: post_GUI.sh  pre_GUI.sh
media/pam/: Makefile.am  qingy
media/pam/debian/: qingy
media/pam/default/: qingy
media/screensavers/: Makefile.am
media/screensavers/matrix/: Makefile.am  matrix.c
media/screensavers/photos/: Makefile  Makefile.am  photos.c  photos_screensvr.c  wildcards.c  wildcards.h
media/screensavers/pixel/: Makefile  Makefile.am  pixel.c  pixel_screensvr.c
media/screensavers/running_time/: Makefile  Makefile.am  running_time.c
media/sessions/: Makefile.am
src/: Makefile.am  chvt.c  chvt.h  directfb_button.c  directfb_button.h  directfb_combobox.c  directfb_combobox.h  directfb_label.c  directfb_label.h  directfb_textbox.c  directfb_textbox.h  directfb_utils.c  directfb_utils.h  framebuffer_mode.c  framebuffer_mode.h  libgcrypt-keygen.c  load_settings.c  load_settings.h  main.c  memmgmt.c  memmgmt.h  misc.c  misc.h  parse_settings.y  qingy_constants.h  reset-console.c  scan_settings.l  scan_settings.lex  session.c  session.h  tty_guardian.c  tty_guardian.h  vt.c  vt.h
src/DirectFB/: Makefile.am  directfb_mode.c  directfb_mode.h  pm.c  pm.h
src/DirectFB/objects/: button.c  button.h  combobox.c  combobox.h  label.c  label.h  listbox.c  listbox.h  screen_saver.c  screen_saver.h  screensaver_module.h  textbox.c  textbox.h  utils.c  utils.h
src/libraries/: Makefile.am  crypto.c  crypto.h  crypto_gpgme.c  crypto_libgcrypt.c  crypto_openssl.c  keybindings.c  keybindings.h  load_settings.c  load_settings.h  logger.c  logger.h  memmgmt.c  memmgmt.h  misc.c  misc.h  parse_settings.y  scan_settings.l  session.c  session.h  tty_guardian.c  tty_guardian.h  vt.c  vt.h
